# gls-print-agent

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
